--- a/custom-thanks.html
+++ b/custom-thanks.html
@@ -1,52 +1,70 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
+  <title>Thanks — 3Leathers</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Thank You – 3Leathers</title>
-
-  <!-- SEO & Open Graph -->
-  <meta name="description" content="Got your message — it’s now clamped under a piece of tooling leather so it doesn’t wander off.">
-  <meta property="og:title" content="Thank You – 3Leathers">
-  <meta property="og:description" content="Walter has received your request and will be in touch soon.">
-  <meta property="og:image" content="https://wwl3leathers.github.io/images/workshop-background.jpg">
-  <meta property="og:url" content="https://wwl3leathers.github.io/custom-thanks.html">
-  <meta name="twitter:card" content="summary_large_image">
-
-  <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="images/favicon.ico">
+  <meta name="robots" content="noindex">
+  <style>
+    :root{
+      --ink:#f4e4a1; /* pastel yellow */
+      --ink-dim:#cabf93;
+      --shadow:rgba(0,0,0,.55);
+      --paper:#1a160d;
+    }
+    html,body{height:100%;margin:0}
+    body{
+      color:var(--ink);
+      font-family:ui-serif, Georgia, "Times New Roman", serif;
+      background:#0d0c0a url("images/background2-workshop.jpg") center/cover no-repeat fixed;
+    }
+    .veil{
+      position:fixed;inset:0;background:linear-gradient(180deg, rgba(0,0,0,.35), rgba(0,0,0,.55));
+    }
+    .center{
+      position:relative;min-height:100%;display:grid;place-items:center;padding:24px;
+    }
+    .card{
+      max-width:820px;
+      background:color-mix(in srgb, var(--paper) 80%, transparent);
+      backdrop-filter:saturate(0.9) blur(2px);
+      border:1px solid rgba(255,255,255,.08);
+      border-radius:18px;
+      box-shadow:0 30px 80px var(--shadow), inset 0 1px 0 rgba(255,255,255,.04);
+      padding:28px 22px;
+    }
+    h1{margin:0 0 10px;font-size:1.9rem;letter-spacing:.2px}
+    p{margin:.4rem 0 0;font-size:1.1rem;line-height:1.5}
+    .sig{margin-top:14px;font-style:italic;color:var(--ink-dim)}
+    .actions{margin-top:18px;display:flex;gap:12px;flex-wrap:wrap}
+    .btn{
+      appearance:none;text-decoration:none;color:#0e0d0a;background:var(--ink);
+      border-radius:999px;padding:10px 16px;font-weight:700;border:none;display:inline-block;
+    }
+    .btn.ghost{background:transparent;color:var(--ink);border:1px solid rgba(255,255,255,.3)}
+    footer{position:fixed;left:0;right:0;bottom:0;padding:10px 14px;color:var(--ink-dim);font-size:.9rem}
+  </style>
 </head>
-
 <body>
-
-  <!-- HEADER -->
-  <header>
-    <nav class="navbar">
-      <a href="index.html" class="logo">3Leathers</a>
-      <ul class="nav-links">
-        <li><a href="shop.html">Shop</a></li>
-        <li><a href="custom.html">Custom</a></li>
-        <li><a href="checkout.html">Checkout</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <!-- THANK YOU MESSAGE -->
-  <section class="hero small-hero" style="background-image:url('images/workshop-background.jpg');">
-    <div class="hero-text">
-      <h1>Got your message — it’s now clamped under a piece of tooling leather so it doesn’t wander off.</h1>
+  <div class="veil"></div>
+  <main class="center" role="main" aria-labelledby="thanks-title">
+    <section class="card">
+      <h1 id="thanks-title">Got your message — it’s now clamped under a piece of tooling leather so it doesn’t wander off.</h1>
       <p>I’ll take a sip of coffee, brush off the leather shavings, and give your idea a look.</p>
       <p>If you don’t hear from me soon, assume I’m elbow-deep in dye — not ignoring you.</p>
-      <p>— Walter @ 3Leathers</p>
-      <a href="shop.html" class="btn">Return to Shop</a>
-      <a href="index.html" class="btn secondary">Back Home</a>
-    </div>
-  </section>
+      <p class="sig">— Walter @ 3Leathers</p>
 
-  <!-- FOOTER -->
-  <footer>
-    <p>© 2025 3Leathers – Custom Leather by Walter Lewis III</p>
-  </footer>
-
+      <div class="actions">
+        <a class="btn" href="/" rel="home">Back to Home</a>
+        <a class="btn ghost" href="/custom.html">Send another request</a>
+      </div>
+    </section>
+  </main>
+  <footer>&copy; <span id="yr">2025</span> 3Leathers</footer>
+  <script>
+    (function(){
+      var yr = document.getElementById('yr'); if (yr) yr.textContent = new Date().getFullYear();
+    })();
+  </script>
 </body>
 </html>
