--- a/custom.html
+++ b/custom.html
@@ -1,262 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>3Leathers — Custom Request</title>
-  <meta name="description" content="Custom leather request form — 3Leathers by Walter Lewis III" />
-  <style>
-    :root{
-      --bg:#0b0b0b; --ink:#f8f5e3; --accent:#d6b14a; --muted:rgba(255,255,255,.08);
-      --ok:#3ddc84; --err:#ff6b6b;
-    }
-    html,body{margin:0;background:var(--bg);color:var(--ink);font-family:system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,"Helvetica Neue",Arial}
-    a{color:var(--accent);text-decoration:none}
-    header{position:sticky;top:0;z-index:10;background:rgba(0,0,0,.6);backdrop-filter:saturate(140%) blur(6px);border-bottom:1px solid var(--muted)}
-    .wrap{max-width:980px;margin:auto;padding:16px}
-    .row{display:flex;align-items:center;gap:12px;justify-content:space-between}
-    .brand{display:flex;align-items:center;gap:10px}
-    .brand img{height:40px;border-radius:4px}
-    nav a{margin-left:10px}
-    .hero{
-      padding:40px 16px;border-bottom:1px solid var(--muted);
-      background:linear-gradient(180deg, rgba(0,0,0,.55), rgba(0,0,0,.7)), url("images/Backdrop2-min.jpeg") center/cover no-repeat;
-    }
-    .hero h1{margin:0 0 6px 0}
-    form{background:rgba(0,0,0,.55);border:1px solid var(--muted);border-radius:14px;padding:20px;margin:24px 0}
-    .grid{display:grid;grid-template-columns:1fr 1fr;gap:14px}
-    .grid-1{grid-template-columns:1fr}
-    label{font-weight:600;font-size:14px}
-    input[type=text],input[type=email],input[type=tel],input[type=url],select,textarea{
-      width:100%;margin-top:6px;padding:10px 12px;border-radius:10px;border:1px solid var(--muted);
-      background:#0f0f0f;color:var(--ink);outline:none;
-    }
-    textarea{min-height:110px;resize:vertical}
-    .hint{font-size:12px;opacity:.75}
-    .pill{padding:10px 14px;border-radius:999px;background:var(--accent);color:#000;font-weight:700;text-decoration:none;border:none;cursor:pointer}
-    .pill.secondary{background:#2a2a2a;color:var(--ink);border:1px solid var(--muted)}
-    .actions{display:flex;gap:10px;flex-wrap:wrap;margin-top:10px}
-    ul#thread{list-style:none;margin:10px 0 0 0;padding:0}
-    ul#thread li{background:#121212;border:1px solid var(--muted);padding:10px;border-radius:10px;margin:8px 0}
-    .msg{border-left:3px solid var(--accent);padding-left:10px}
-    .req{display:flex;gap:8px;align-items:center;margin-top:10px}
-    .req input[type=checkbox]{transform:scale(1.2)}
-    .status{margin-top:14px;font-weight:700}
-    .ok{color:var(--ok)} .err{color:var(--err)}
-    footer{padding:24px 16px;border-top:1px solid var(--muted);text-align:center;color:#cfc8a8}
-    @media (max-width:720px){.grid{grid-template-columns:1fr}}
-  </style>
-</head>
-<body>
-  <header>
-    <div class="wrap row">
-      <div class="brand">
-        <img src="images/Logo-min.jpg" alt="3Leathers logo">
-        <strong>3Leathers</strong>
-      </div>
-      <nav aria-label="Primary">
-        <a href="index.html">Home</a> •
-        <a href="shop.html">Shop</a> •
-        <a href="custom.html" aria-current="page"><strong>Custom</strong></a> •
-        <a href="checkout.html">Checkout</a>
-      </nav>
-    </div>
-  </header>
-
-  <section class="hero">
-    <div class="wrap">
-      <h1>Custom Leather Request</h1>
-      <p>No machines. Made by hand. Tell me what you have in mind — I’ll take it from there.</p>
-    </div>
-  </section>
-
-  <main class="wrap">
-    <!-- 3Leathers — Custom Request Form (Formspree v2) -->
-<form id="custom-request"
-      action="https://formspree.io/f/xvgvjnbe" method="POST"
-      accept-charset="UTF-8"
-      autocomplete="on"
-      novalidate>
-
-  <!-- Customer Details -->
-  <label for="name">Name *</label>
-  <input id="name" name="name" type="text" required aria-required="true" placeholder="Your full name" />
-
-  <label for="email">Email *</label>
-  <input id="email" name="email" type="email" required aria-required="true" placeholder="you@example.com" />
-
-  <label for="phone">Phone (optional)</label>
-  <input id="phone" name="phone" type="tel" inputmode="tel" placeholder="(304) 555-0199" />
-
-  <!-- Project -->
-  <label for="item_type">Item Type *</label>
-  <select id="item_type" name="item_type" required aria-required="true">
-    <option value="" disabled selected>Select one…</option>
-    <option>Wallet</option>
-    <option>Purse</option>
-    <option>Holster</option>
-    <option>Other</option>
-  </select>
-
-  <label for="color_finish">Leather Color / Finish</label>
-  <input id="color_finish" name="color_finish" type="text" placeholder="e.g., Oxblood, matte" />
-
-  <label for="sizing_notes">Sizing / Fit Notes</label>
-  <input id="sizing_notes" name="sizing_notes" type="text" placeholder="Measurements or fit details" />
-
-  <label for="ref_link">Reference Image Link (optional)</label>
-  <input id="ref_link" name="ref_link" type="url" inputmode="url" placeholder="https://..." />
-  <small>Tip: Paste any link to a photo — I’ll open it when reviewing your request.</small>
-
-  <label for="notes">Conversation / Notes</label>
-  <textarea id="notes" name="notes" rows="6" placeholder="Tell me what you have in mind…"></textarea>
-
-  <!-- Acknowledgment -->
-  <label class="agree">
-    <input id="ack_deposit" name="ack_deposit" type="checkbox" required aria-required="true" />
-    I agree that custom work may require a deposit and build time.
-  </label>
-
-  <!-- Hidden metadata (optional but helpful) -->
-  <input type="hidden" name="_subject" value="New Custom Request — 3Leathers" />
-  <!-- Redirect after success (optional): create /custom-thanks.html if you want -->
-  <input type="hidden" name="_redirect" value="https://wwl3leathers.github.io/custom-thanks.html" />
-  <input type="hidden" id="page_url" name="page_url" value="" />
-  <!-- Simple honeypot to reduce spam -->
-  <input type="text" name="_gotcha" tabindex="-1" autocomplete="off" style="position:absolute;left:-9999px;opacity:0;height:0;width:0;" />
-
-  <!-- Controls -->
-  <button type="submit">Send Request</button>
-  <button type="reset">Reset</button>
-</form>
-
-<script>
-  // Attach page URL for context in your Formspree dashboard/email
-  (function () {
-    var urlField = document.getElementById('page_url');
-    if (urlField) urlField.value = window.location.href;
-    // Prevent accidental double-submits
-    var form = document.getElementById('custom-request');
-    if (!form) return;
-    form.addEventListener('submit', function (e) {
-      var btn = form.querySelector('button[type="submit"]');
-      if (btn) {
-        btn.disabled = true;
-        btn.textContent = 'Sending…';
-      }
-    });
-  })();
-</script>
-
-  </main>
-
-  <footer>
-    <div class="wrap" style="text-align:center">
-      <small>&copy; <span id="yr"></span> 3Leathers — Handmade by Walter Lewis III</small>
-    </div>
-  </footer>
-
-  <script>
-    // Page context
-    document.getElementById('yr').textContent = new Date().getFullYear();
-    const form = document.getElementById('customForm');
-    form.querySelector('[name="pageURL"]').value = location.href;
-
-    // Build conversation thread → hidden textarea
-    const threadEl = document.getElementById('thread');
-    const inputEl  = document.getElementById('commentInput');
-    const convoEl  = document.getElementById('conversation');
-    const addBtn   = document.getElementById('addMsg');
-    const clearBtn = document.getElementById('clearMsg');
-
-    function rebuildConversation(){
-      const lines = Array.from(threadEl.querySelectorAll('li .msg')).map(x=>x.textContent.trim());
-      convoEl.value = lines.map((t,i)=>`[${String(i+1).padStart(2,'0')}] ${t}`).join('\n');
-    }
-    addBtn.addEventListener('click', ()=>{
-      const txt = (inputEl.value || '').trim();
-      if(!txt) return;
-      const li = document.createElement('li');
-      li.innerHTML = `<div class="msg">${txt}</div>`;
-      threadEl.appendChild(li);
-      inputEl.value = '';
-      rebuildConversation();
-      inputEl.focus();
-    });
-    clearBtn.addEventListener('click', ()=>{
-      threadEl.innerHTML = '';
-      rebuildConversation();
-      inputEl.focus();
-    });
-
-    // URL prefill for quick quotes
-    (function prefillFromQuery(){
-      const p = new URLSearchParams(location.search);
-      const map = {
-        name: '#name',
-        email: '#email',
-        phone: '#phone',
-        product: '#product',
-        leather: '#leather',
-        sizing: '#sizing',
-        referenceUrl: '#referenceUrl'
-      };
-      Object.entries(map).forEach(([key, sel])=>{
-        if (p.has(key)) {
-          const el = document.querySelector(sel);
-          if (!el) return;
-          el.value = p.get(key);
-        }
-      });
-    })();
-
-    // AJAX submit to Formspree (no page change)
-    const status = document.getElementById('status');
-    form.addEventListener('submit', async (e)=>{
-      e.preventDefault();
-      status.textContent = 'Sending…'; status.className = 'status';
-      rebuildConversation();
-      const formData = new FormData(form);
-      try{
-        const resp = await fetch(form.action, { method:'POST', body: formData, headers: { 'Accept': 'application/json' }});
-        if (resp.ok) {
-          status.textContent = 'Thanks! Your custom request was received.';
-          status.classList.add('ok');
-          form.reset(); threadEl.innerHTML = ''; convoEl.value = '';
-        } else {
-          const data = await resp.json().catch(()=>({}));
-          const msg = (data && data.errors && data.errors.length) ? data.errors.map(e=>e.message).join(', ') : 'Submission failed.';
-          status.textContent = msg + ' Please try again.'; status.classList.add('err');
-        }
-      } catch(err){
-        status.textContent = 'Network error — please try again in a moment.'; status.classList.add('err');
-      }
-    }, false);
-  <script>
-(function () {
-  // Find the Formspree form on this page
-  var form = document.querySelector('form[action^="https://formspree.io"]');
-  if (!form) return;
-
-  form.addEventListener('submit', async function (e) {
-    e.preventDefault(); // stop the default navigation to Formspree page
-    var data = new FormData(form);
-
-    try {
-      await fetch(form.action, {
-        method: 'POST',
-        body: data,
-        headers: { 'Accept': 'application/json' }
-      });
-      // On success, send visitor to your thank-you page:
-      window.location.href = '/custom-thanks.html';
-    } catch (err) {
-      // If anything hiccups, still show your thank-you so users aren't stuck
-      window.location.href = '/custom-thanks.html';
-    }
-  });
-})();
-</script>
 
 <script>
 (function () {
@@ -275,23 +16,9 @@
     box.style.borderRadius = '8px';
     box.style.margin = '16px 0';
 
-    box.innerHTML = [
-      '<strong>Before you hit Send:</strong>',
-      '<ul style="margin:8px 0 0 18px;">',
-      '<li>Your request goes straight to my inbox (Formspree delivers it).</li>',
-      '<li>I’ll reply by email with next steps + a ballpark quote.</li>',
-      '<li>No payment yet—just details. We only take a deposit after we both agree.</li>',
-      '</ul>',
-      '<details style="margin-top:10px;">',
-      '<summary style="cursor:pointer;">Peek at the thank-you note you’ll see after sending</summary>',
-      '<p style="margin-top:8px;">Thanks for reaching out! Your custom order request has landed on my workbench. I’ll email you shortly to confirm details and timeline. If you have photos or sketches, just reply to my email — attachments are welcome there.</p>',
-      '<p style="margin:8px 0 0;">— Walter @ 3Leathers (just me and a lot of leather tools)</p>',
-      '</details>'
-    ].join('');
+    box.innerHTML = '<p style="margin:0;">Thanks for reaching out! Your custom order request has landed on my workbench. I’ll email you shortly to confirm details and timeline. If you have photos or sketches, just reply to my email — attachments are welcome there.</p><p style="margin:8px 0 0;">— Walter @ 3Leathers (just me and a lot of leather tools)</p>';
 
     form.insertBefore(box, btnRow);
   });
 })();
 </script>
-</body>
-</html>
