--- a/checkout.html
+++ b/checkout.html
@@ -128,24 +128,13 @@
         </div>
 
         <!-- Card Icons Strip (icons-only, visual) -->
-        <div class="card-icons" aria-hidden="true">
-          <!-- Visa -->
-          <svg width="44" height="28" viewBox="0 0 44 28" xmlns="http://www.w3.org/2000/svg">
-            <rect width="44" height="28" rx="4" fill="#f2f2f2"/><text x="10" y="19" font-size="14" font-family="Arial, sans-serif" fill="#000">VISA</text>
-          </svg>
-          <!-- MasterCard -->
-          <svg width="44" height="28" viewBox="0 0 44 28" xmlns="http://www.w3.org/2000/svg">
-            <rect width="44" height="28" rx="4" fill="#f2f2f2"/><text x="2" y="19" font-size="10" font-family="Arial, sans-serif" fill="#000">MASTERCARD</text>
-          </svg>
-          <!-- American Express -->
-          <svg width="44" height="28" viewBox="0 0 44 28" xmlns="http://www.w3.org/2000/svg">
-            <rect width="44" height="28" rx="4" fill="#f2f2f2"/><text x="4" y="19" font-size="10" font-family="Arial, sans-serif" fill="#000">AMEX</text>
-          </svg>
-          <!-- Discover -->
-          <svg width="44" height="28" viewBox="0 0 44 28" xmlns="http://www.w3.org/2000/svg">
-            <rect width="44" height="28" rx="4" fill="#f2f2f2"/><text x="2" y="19" font-size="10" font-family="Arial, sans-serif" fill="#000">DISCOVER</text>
-          </svg>
-        </div>
+        <!-- Card Icons Strip (real logos) -->
+<div class="card-icons" aria-hidden="true">
+  <img src="images/visa.svg" alt="Visa" width="44" height="28">
+  <img src="images/mastercard.svg" alt="MasterCard" width="44" height="28">
+  <img src="images/americanexpress.svg" alt="American Express" width="44" height="28">
+  <img src="images/discover.svg" alt="Discover" width="44" height="28">
+</div>
 
         <div class="btns" style="margin-top:12px">
           <button class="pill" type="submit">Send Order</button>
