--- a/checkout.html
+++ b/checkout.html
@@ -129,11 +129,11 @@
 
         <!-- Card Icons Strip (icons-only, visual) -->
         <!-- Card Icons Strip (real logos) -->
-<div class="card-icons" aria-hidden="true">
-  <img src="images/visa.svg" alt="Visa" width="44" height="28">
-  <img src="images/mastercard.svg" alt="MasterCard" width="44" height="28">
-  <img src="images/americanexpress.svg" alt="American Express" width="44" height="28">
-  <img src="images/discover.svg" alt="Discover" width="44" height="28">
+<div class="card-logos" style="display: flex; gap: 12px; align-items: center; flex-wrap: wrap; margin-top: 8px; padding: 6px 12px; background-color: #d2b48c; border-radius: 10px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+  <img src="/images/visa.svg" alt="Visa" style="height: 24px;" />
+  <img src="/images/mastercard.svg" alt="Mastercard" style="height: 24px;" />
+  <img src="/images/amex.svg" alt="American Express" style="height: 24px;" />
+  <img src="/images/discover.svg" alt="Discover" style="height: 24px;" />
 </div>
 
         <div class="btns" style="margin-top:12px">
