--- a/checkout.html
+++ b/checkout.html
@@ -66,16 +66,17 @@
     </div>
   </header>
 
-  <section class="hero">
-    <div class="wrap">
-      <h1>Checkout</h1>
-      <p class="muted">Review your order, add your contact details, and send. I’ll confirm timelines and any deposit before work begins.</p>
-      <div class="btns" style="margin-top:10px">
-        <a class="pill" href="shop.html">Back to Shop</a>
-        <button class="pill secondary" id="clearCart" type="button">Clear Order</button>
-      </div>
+ <section class="hero">
+  <div class="wrap">
+    <h1 id="thanks-title">Got your message — it’s now clamped under a piece of tooling leather so it doesn’t wander off.</h1>
+    <p>I’ll take a sip of coffee, brush off the leather shavings, and give your idea a look.</p>
+    <p>If you don’t hear from me soon, assume I’m elbow-deep in dye — not ignoring you.</p>
+    <div class="btns" style="margin-top:10px">
+      <a class="pill" href="shop.html">Back to Shop</a>
+      <button class="pill secondary" id="clearCart" type="button">Clear Order</button>
     </div>
-  </section>
+  </div>
+</section>
 
   <main class="wrap grid">
     <!-- Order summary -->
